objects/LLC_BI__AccountDocument__c.object
<CustomObject>
    <fields>
        <fullName>NDOC__HasBeenWaived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field auto-populates when a placeholder&apos;s status has been changed to waived by the system.</description>
        <label>HasBeenWaived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDOC__Is_Staged__c</fullName>
        <description>This field is optional and is automatically populated. Formula field to determine if document is in staging.</description>
        <formula>ISBLANK(LLC_BI__docType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Staged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDOC__Placeholder_Approval_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field works in tandem with the older Approval Roles field, which is limited to fewer characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is optional. This is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document.</inlineHelpText>
        <label>Placeholder Approval Roles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__Placeholder_Viewer_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to view the document preview and download the document. If left blank, all roles can view and download the document. This field works in tandem with the older Viewer Roles field, which is limited to fewer characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Placeholder Viewer Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__Portal_Rejection_Comment__c</fullName>
        <label>Portal Rejection Comment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Portal_Rejection_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>The document you provided is missing a required signature. Please sign this document and upload again.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDOC__Related_Generation_Context_Id__c</fullName>
        <description>Stores the id of the related object that informed the creation of the placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Generation Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Trashed_Date__c</fullName>
        <description>This field is optional and auto-populates. This field stores the date and time that a document is trashed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Trashed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NDOC__Year__c</fullName>
        <description>The administrator populates this optional text field to store the document year. By default it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the year in the following 4 digit format: 2021.</inlineHelpText>
        <label>Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__fileName__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__isTrash__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and auto-populates. When a document is trashed, this field is checked and the document appears in the trash/archive area of Document Manager.</description>
        <label>isTrash</label>
        <type>Checkbox</type>
    </fields>
    <label>AccountDocument</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountDocuments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CVR_Account_Review_Status</fullName>
        <active>true</active>
        <description>Used to restrict users from approving the Account Document whose Document Date is blank.</description>
        <errorConditionFormula>AND(
ISCHANGED(LLC_BI__reviewStatus__c),
ISBLANK(CF_Document_Date__c),

OR(
ISPICKVAL(PRIORVALUE(LLC_BI__reviewStatus__c), &apos;In-File&apos;),
ISPICKVAL(PRIORVALUE(LLC_BI__reviewStatus__c), &apos;Awaiting Review&apos;)),

OR(
ISPICKVAL(LLC_BI__reviewStatus__c, &apos;Reviewed&apos;),
ISPICKVAL(LLC_BI__reviewStatus__c, &apos;Approved&apos;)
))</errorConditionFormula>
        <errorMessage>Please ensure the Document Date field has been updated to change the status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NDOC__Invalid_Year_Syntax</fullName>
        <active>true</active>
        <description>Ensure that Year is in valid format.</description>
        <errorConditionFormula>AND(
	NOT(REGEX(NDOC__Year__c,&quot;^\\d{4}$&quot;)),
	NOT(ISBLANK(NDOC__Year__c))
)</errorConditionFormula>
        <errorDisplayField>NDOC__Year__c</errorDisplayField>
        <errorMessage>The year was not entered using 4 digits. Please enter the year in the following 4 digit format to continue: 2021.</errorMessage>
    </validationRules>
</CustomObject>